# libgitledger

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .markdownlint.yaml  ACTIVITY.log.jsonl  ACTIVITY.schema.json  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  FEEDBACK.md  ISSUES.md  LICENSE  Makefile  NOTICE  README.md  meson.build  meson_options.txt  slaps.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  milestone_task.md
.github/workflows/: ci.yml  compliance.yml  docs-site.yml
build-asan/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  gitledger_error_test  gitledger_tests  gitledger_version_test  mg-ledger
build-asan/Testing/Temporary/: CTestCostData.txt
build-tsan/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  gitledger_error_test  gitledger_tests  gitledger_version_test  mg-ledger
build-tsan/Testing/Temporary/: CTestCostData.txt
cmake/: verify_doxygen.cmake
crt/linux/x86_64/: crt0.S
docs/: DRIFT_REPORT.md  Doxyfile  ISSUE-BREAKDOWN.md  ISSUE-DRAFTS.md  ISSUES.md  PREFLIGHT.md  PROJECT-PLAN.md  ROADMAP-DAG.md  ROADMAP-DAG.mmd  SLAPS-SPEC.md  SLAPS-TECH-SPEC.md  SPEC copy.txt  SPEC.md  TROPHY.md  index.md
include/gitledger/: context.h  error.h  export.h
include/ledger/: compliance.h
include/libgitledger/: version.h
libgitledger/: README.md
libgitledger/adapters/: README.md
libgitledger/cli/: README.md  mg-ledger.c
libgitledger/core/: .clang-tidy  README.md  context.c
libgitledger/core/adapters/: README.md
libgitledger/core/adapters/libgit2/: README.md
libgitledger/core/cache/: README.md
libgitledger/core/domain/: README.md  error.c  gitledger.c
libgitledger/core/internal/: context_internal.h
libgitledger/core/policy_trust/: README.md
libgitledger/core/ports/: README.md
libgitledger/include/: README.md
libgitledger/include/gitledger/: README.md  gitledger.h
libgitledger/tests/: README.md  main.c
src/: version.c
src/compliance/: checks_core.c  checks_policy.c  checks_wasm.c  report.c  suite.c
tests/: compliance_smoke.c  compliance_suite_test.c  error_test.c  ffs_smoke.c  version_test.c
tools/: log_activity.py  log_activity_dispatch.sh
tools/cli/: slaps_coord.py  slaps_go.sh  slaps_logs.py  slaps_watch_gh.py
tools/container/: Dockerfile  dispatch.sh  invoke.sh  run-matrix.sh
tools/doctor/: cap_probe.py  sentinel.py  status.py
tools/hooks/: pre-commit  pre-push
tools/lint/: check_symbols.sh  clang_format_check.sh  run_clang_tidy.sh  validate_activity_log.sh
tools/roadmap/: ensure_issue_template.py  sweep_issues.py  validate_dag.py
tools/tasks/: assistant_monitor.py  bucket_waves.py  coordinate_waves.py  coordinator_gh.py  generate_prompts.py  gh_preflight.py  log_viewer.py  process_followups.py  update_prompts_with_ac.py  watch_tasks.py  watch_tasks_gh.py
tools/tasks/taskwatch/: __init__.py  adapters.py  blockers_cache.py  cache.py  domain.py  domain_gh.py  ghcli.py  logjson.py  ports.py  waves_cache.py
tools/tasks/tests/: test_coordinator_gh.py  test_ghcli_retries.py  test_taskwatch.py  test_taskwatch_gh.py
tools/testing/: prepare-fixtures.sh
website/: docusaurus.config.js  package.json  sidebars.js
website/src/css/: custom.css
website/src/pages/: index.md
